<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_02"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/px30"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            style="@style/Divider1PxInk100Horizontal"
            android:layout_width="match_parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDarkMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_01">

            <com.jarvis.design_system.item.JxListItem
                android:id="@+id/viewDarkMode"
                style="@style/ListItem.SizeS"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px50"
                android:background="@color/bg_01"
                app:itemContentElement="onlyTitle"
                app:itemEndElement="textAndIcon"
                app:itemEndText="Hệ Thống"
                app:itemStartElement="display"
                app:itemStartIcon="@drawable/ic_darkmode"
                app:itemTitle="@string/setting_dark_mode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            style="@style/Divider1PxInk100Horizontal"
            android:layout_width="match_parent" />

        <com.jarvis.design_system.item.JxListItem
            android:id="@+id/viewLanguage"
            style="@style/ListItem.SizeS"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px50"
            android:background="@color/bg_01"
            app:itemContentElement="onlyTitle"
            app:itemEndElement="textAndIcon"
            app:itemEndIcon="@drawable/all_ic_arrow_right"
            app:itemEndText="English"
            app:itemStartElement="display"
            app:itemStartIcon="@drawable/setting_ic_language"
            app:itemTitle="@string/setting_language" />

        <View
            style="@style/Divider1PxInk100Horizontal"
            android:layout_width="match_parent" />

        <com.jarvis.design_system.item.JxListItem
            android:id="@+id/viewVersion"
            style="@style/ListItem.SizeS"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px50"
            android:background="@color/bg_01"
            app:itemContentElement="onlyTitle"
            app:itemEndElement="hide"
            app:itemEndText="1.0.0"
            app:itemStartElement="display"
            app:itemStartIcon="@drawable/setting_ic_aboutus"
            app:itemTitle="@string/version" />

        <View
            style="@style/Divider1PxInk100Horizontal"
            android:layout_width="match_parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
